add supplier modules

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,4 +1,10 @@
 #app {
+  [container] {
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .el-table {
     font-size: 12px;
 
