replace to InlineEdit

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -18,6 +18,10 @@
       height: 30px;
     }
 
+    &__expand-icon {
+      height: 30px;
+    }
+
     &__expanded-cell {
       padding: 10px 80px;
     }
