--- a/template/index.html
+++ b/template/index.html
@@ -4,10 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-default/index.css">
-  <link rel="stylesheet" href="//cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css">
-  <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
-  <script src="http://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
-  <title>erp-fe</title>
+  <title>中孚空间OA系统</title>
 </head>
 
 <body>
