add textarea mini Sidebar

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -63,4 +63,11 @@
       }
     }
   }
+
+  .el-menu-item {
+    height: 32px;
+    line-height: 32px;
+    font-size: 12px;
+    margin-left: 10px;
+  }
 }
