--- a/template/index.html
+++ b/template/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-default/index.css">
+  <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <title>中孚空间OA系统</title>
 </head>
 
