--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -18,12 +18,20 @@
       height: 30px;
     }
 
+    .danger-row {
+      background-color: rgba(255, 73, 73, .1);
+    }
+
+    .success-row {
+      background-color: rgba(18, 206, 102, .1);
+    }
+
     &__expand-icon {
       height: 30px;
     }
 
     &__expanded-cell {
-      padding: 10px 80px;
+      padding: 10px 0 10px 160px;
     }
   }
 
@@ -69,5 +77,9 @@
     line-height: 32px;
     font-size: 12px;
     margin-left: 10px;
+  }
+
+  .info-cell {
+    background-color: rgba(32, 160, 255, .1);
   }
 }
