add project management

--- a/src/style/helper.scss
+++ b/src/style/helper.scss
@@ -32,4 +32,16 @@
   ._pointer:hover {
     cursor: pointer;
   }
+
+  ._text-danger {
+    color: #ff4949;
+  }
+
+  ._text-warning {
+    color: #f7ba2a;
+  }
+
+  ._p0 {
+    padding: 0;
+  }
 }
