--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -12,6 +12,10 @@
       background-color: rgba(255, 73, 73, .1);
     }
 
+    .primary-row {
+      background-color: rgba(32, 160, 255, .1);
+    }
+
     .success-row {
       background-color: rgba(18, 206, 102, .1);
     }
