add chart module

--- a/src/style/helper.scss
+++ b/src/style/helper.scss
@@ -21,8 +21,16 @@
     text-align: right;
   }
 
+  ._tc {
+    text-align: center;
+  }
+
   ._fr {
     float: right;
+  }
+
+  ._rel {
+    position: relative;
   }
 
   ._text {
